# AudioAnalyse

./: .env  .gitignore  1_home.py  CLAUDE.md  PROJECT_ROADMAP.md  README.md  alembic.ini  app.py  auth.py  config.py  import_from_csv.py  main.py  pyproject.toml  refresh_token_in_db.py  reset_db.py  test_dataset_import.py
.claude/: settings.local.json
.github/workflows/: sonarqube.yml
alembic/: env.py
alembic/versions/: 230c5f96c628_fix_foreignkey_definition_field_track_.py  448246aa6331_update_some_tiny_modifications.py  45380f93f7cc_create_new_table_trackstreamday_added_.py  4a5e71891f8b_change_on_the_field_release_date_table_.py  4dcb98466606_changing_seq_name_of_metrics_table_due_.py  9777873c4b09_changing_field_name_in_table_.py  998030cba0da_creation_of_all_tables.py  9987861e6de9_change_on_the_field_name_of_the_table_.py  b0ea83093de8_adding_two_new_tables_.py  c7acef220a9b_adding_new_table_trackstreamday.py  ee6068863109_making_field_monthly_listeners_and_.py  (+1 more)
constants/: api.py  scraping.py  service.py
core/: config.py
dao/: base_dao.py  service.py
dao/db/: artist_dao.py  (+7 more)
pages/: 2_top_items.py  3_custom_values.py  4_import_data.py
pipeline/: dataset_importer.py  factory.py  ingest.py  process.py  reporting.py  scrape.py  service.py
routers/: home.py  import_data.py  job.py  scores.py  top_items.py  utils.py
static/: style.css
streaming_history_analyser/: dataset_importer.py  factory.py  ingest.py  process.py  reporting.py  scrape.py  service.py  visualize.py
templates/: base.html  home.html  import.html  scores.html  top_items.html
(+97 files in other folders)
