[project]
name = "audioanalyse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "html5lib>=1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pyqt6>=6.9.1",
    "requests>=2.32.4",
    "ruff>=0.12.9",
    "selenium>=4.34.2",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
]
